<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dip"
        android:paddingTop="0dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/banner1" />
    </LinearLayout>
    
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/title"
    android:gravity="center"
    android:textSize="20sp"
    android:textColor="#000000"
    />
    
    <TableLayout
    	android:id="@+id/layout1"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:padding="20dp"
    >
    	<TableRow
    		android:id="@+id/row1"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"
    	>
    	<TextView
    		android:id="@+id/txtUsername"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:text="@string/txtUname"
    		android:padding="10dp"
    		android:textColor="#000000"
    	></TextView>
    	
    	<EditText
    		android:id="@+id/editUsername"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"
    		android:layout_weight="0.5"
    		android:padding="10dp"
    		style="@android:style/Widget.EditText"
    		android:textColor="#000000"
    	>
    	</EditText>
    </TableRow>
    <TableRow
    	android:id="@+id/row2"
    >
    	<TextView
    		android:id="@+id/txtPassword"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:text="@string/txtPassword"
    		android:padding="10dp"
    		android:textColor="#000000"
    	></TextView>
    	
    	<EditText
    		android:id="@+id/editPassword"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"
    		android:layout_weight="0.5"
    		android:padding="10dp"
    		style="@android:style/Widget.EditText"
    		android:password="true"
    		android:textColor="#000000"
    	></EditText>
    </TableRow>
    <TableRow
    	android:id="@+id/row3"
    	android:layout_gravity="center"
    >
    	<Button
    		android:id="@+id/buttonLogin"
    		android:layout_width="0.0dip"
    		android:layout_height="wrap_content"
    		android:text="@string/buttonLogin"
    		android:paddingTop="5.0dip"
    		android:layout_gravity="center"
    		android:layout_weight="1.0"
    	></Button>
    	<Button
    		android:id="@+id/buttonNewUser"
    		android:layout_width="0.0dip"
    		android:layout_height="wrap_content"
    		android:paddingTop="1dip"
    		android:text="@string/buttonSignUp"
    		android:layout_gravity="center"
    		android:layout_weight="1.0"
    	></Button>
    </TableRow>
    <TableRow
    	android:id="@+id/row4"
    	android:layout_gravity="center"
    >
    	<Button
    		android:id="@+id/buttonShowAll"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/buttonShowAll"
    		android:paddingTop="1dip"
    		android:layout_gravity="center"
    		android:layout_weight="1"
    	></Button>
    	</TableRow>
    </TableLayout>
</LinearLayout>
